assets/mobirise/css/mbr-additional.css
/* ... */
.navbar-toggleable-xl .navbar-toggler {
  display: none;
}
.card-img {
  width: auto;
}
.menu .navbar.collapsed:not(.beta-menu) {
  flex-direction: column;
  -webkit-flex-direction: column;
}
.carousel-item.active,
.carousel-item-next,
.carousel-item-prev {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}
.note-air-layout .dropup .dropdown-menu,
.note-air-layout .navbar-fixed-bottom .dropdown .dropdown-menu {
  bottom: initial !important;
}
html,
body {
  height: auto;
  min-height: 100vh;
}
.dropup .dropdown-toggle::after {
  display: none;
}
@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
  .card-wrapper {
    flex: auto!important;
  }
}
.cid-ripj0XJoCk {
  padding-top: 90px;
  padding-bottom: 90px;
  background-image: url("../../../assets/images/9-2000x1500.jpg");
}
.cid-ripj0XJoCk .mbr-section-subtitle {
  color: #ff3366;
  font-weight: 300;
}
.cid-ripj0XJoCk .number-wrap {
  color: #ff3366;
  border-color: rgba(255, 255, 255, 0.15);
  position: relative;
  display: inline-block;
  text-align: center;
  padding: 5px 10px 13px 10px;
  margin: 0;
  min-width: 118px;
  border-radius: 2px;
  max-width: 100%;
}
.cid-ripj0XJoCk .number {
  font-style: normal;
  font-weight: 700;
  font-size: 55px;
  text-transform: none;
  letter-spacing: -2px;
  word-spacing: 0;
  line-height: 1.3;
  color: #ffffff;
}
.cid-ripj0XJoCk .period {
  display: block;
  padding-top: 2px;
  border-top: 1px solid rgba(0, 0, 0, 0.1);
}
.cid-ripj0XJoCk .dot {
  position: absolute;
  top: -10px;
  right: -1em;
  width: 1em;
  display: block;
  height: 83%;
  overflow: hidden;
  font-style: normal;
  font-weight: 700;
  font-size: 55px;
  line-height: 89.65px;
  text-transform: none;
  letter-spacing: 0;
  word-spacing: 0;
  color: #ffffff;
}
.cid-ripj0XJoCk .countdown-cont {
  max-width: 700px;
  margin: 0 auto;
}
@media (max-width: 768px) {
  .cid-ripj0XJoCk .dot {
    display: none;
  }
}
@media (max-width: 543px) {
  .cid-ripj0XJoCk .number-wrap {
    margin-bottom: 15px;
  }
}
@media (max-width: 550px) {
  .cid-ripj0XJoCk .col-xs-3 {
    padding-left: 0;
    padding-right: 0;
    max-width: 25%;
    flex: 0 0 25%;
  }
  .cid-ripj0XJoCk .number-wrap {
    min-width: auto;
  }
}
@media (max-width: 440px) {
  .cid-ripj0XJoCk .number,
  .cid-ripj0XJoCk .dot {
    font-size: 40px;
  }
}
@media (max-width: 380px) {
  .cid-ripj0XJoCk .period {
    font-size: 0.8rem;
  }
}
.cid-ripj0XJoCk H2 {
  color: #ff3366;
}
.cid-ripj0XJoCk .mbr-section-subtitle DIV {
  color: #ff3366;
  text-align: center;
}
.cid-ripj0XJoCk .mbr-section-subtitle I {
  color: #ff3366;
}
.cid-ripl6Zb0bq {
  padding-top: 0px;
  padding-bottom: 0px;
  background-color: #ffffff;
}
.cid-ripl6Zb0bq .mbr-slider .carousel-control {
  background: #1b1b1b;
}
.cid-ripl6Zb0bq .mbr-slider .carousel-control-prev {
  left: 0;
  margin-left: 2.5rem;
}
.cid-ripl6Zb0bq .mbr-slider .carousel-control-next {
  right: 0;
  margin-right: 2.5rem;
}
.cid-ripl6Zb0bq .mbr-slider .modal-body .close {
  background: #1b1b1b;
}
.cid-ripl6Zb0bq .mbr-gallery-item > div::before {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  background: #554346;
  opacity: 0;
  -webkit-transition: 0.2s opacity ease-in-out;
  transition: 0.2s opacity ease-in-out;
  background: linear-gradient(to left, #554346, #45505b) !important;
}
.cid-ripl6Zb0bq .mbr-gallery-item > div:hover .mbr-gallery-title::before {
  background: transparent !important;
}
.cid-ripl6Zb0bq .mbr-gallery-item > div:hover:before {
  opacity: 0.7 !important;
}
.cid-ripl6Zb0bq .mbr-gallery-title {
  font-size: .9em;
  position: absolute;
  display: block;
  width: 100%;
  bottom: 0;
  padding: 1rem;
  color: #fff;
  z-index: 2;
}
.cid-ripl6Zb0bq .mbr-gallery-title:before {
  content: " ";
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  z-index: -1;
  position: absolute;
  background: #554346 !important;
  opacity: 0.7;
  -webkit-transition: 0.2s background ease-in-out;
  transition: 0.2s background ease-in-out;
  background: linear-gradient(to left, #554346, #45505b) !important;
}
.cid-ripl9uwCan {
  padding-top: 30px;
  padding-bottom: 30px;
  background-color: #2e2e2e;
}
@media 
  (-webkit-min-device-pixel-ratio: 2), 
  (min-resolution: 192dpi) { 
  .cid-ripj0XJoCk {
    background-image: url("../../../assets/images/9-2000x1500.jpg");
  }

